--- a/src/webui/_locales/ar/messages.json
+++ b/src/webui/_locales/ar/messages.json
@@ -67,6 +67,10 @@
         "message": "إعدادات",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "النمسا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "تم الإتصال ",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "<span class=\"state-word\">جاري قطع الإتصال</span> بسايفون  …",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "سويسرا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "سايفون مضبوط حاليا لإستعمال بروكسي نظامك كأبستريم بروكسي ”. <br>\nومع ذلك، يظهر إننا غير قادرين على الإتصال بسيرفر سايفون من خلال هذا البروكسي .<br>\nالرجاء تفعيل  \"لا تستخدم أبستريم بروكسي\"  “Don't use upstream proxy” والمحاولة من جديد.",
@@ -159,6 +167,10 @@
         "message": "إسبانيا",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "الدنمارك",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "تم تغيير الإعدادات ",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>فشل سايفون في ضبط إعدادات البروكسي للنظام .</p>\n<p>يمكن أن يعود ذلك لوجود تصادم مع نظام مكافحة الفيروسات خاصتك .  قد تحتاج إلى الضبط اليدوي لتطبيقك أو لإعدادات  بروكسي النظام لكي تستعمل بروكسي سايفون المحلي .  </p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "اليونان",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>لقد ضبطت سايفون  لإستعمال منفذ محلي خاص  للبروكسي  سوكس  SOCKS\" <br\">\nمع الأسف  ظهر أن هذا المنفذ في طور الإستعمال حاليا ولا يمكن لسايفون إستعماله .\n</p>\n<p>\nالرجاء تغيير قيمة منفذ بروكسي  سوكس (SOCKS)  المضبوطة  \"configured SOCKS  proxy port value \" والمحاولة  من جديد.  ننصح بإزالة القيمة كي يستطيع سايفون إختيار منفذ متوفر أوتوماتيكيا. </p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "إتصل عبر ",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "بلغاريا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS  سوكس ",
@@ -239,6 +259,10 @@
         "message": "سايفون لإصدارات أجهزة سطح مكتب من ويندوز (Windows Client Version)",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "النرويج",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "أبستريم بروكسي  ",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "فرنسا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "إيطاليا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "هناك أخطاء في قيم إعداداتك. ألرجاء تصحيحهم قبل المباشرة. ",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "ألمانيا",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "هونغ كونغ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "سايفون فشل في ضبط إعدادات بروكسي النظام لإتصال الإنترنت المسمى “<%- data %>”. قد يكون ذلك سببه تصادم مع  نظام مكافحة الفيروسات. قد تحتاج إلى الضبط اليدوي لتطبيقك أو لإعدادات  بروكسي النظام لكي تستعمل بروكسي سايفون المحلي. ",
@@ -403,6 +439,10 @@
         "message": "يجب أن تحدد كل من إسم المستخدم و كلمة المرور، أو تترك مكانهما خاليين لعدم المصادقة.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "بلجيكا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "إستعمل  أسلوب L2TP/IPSec",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "إتصل عبر ",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "السويد",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "المملكة المتحدة",
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "سيرفر سايفون الإقليمي  ",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "رومانيا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "جمهورية التشيك",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "يتطلب تعيين اسم المستخدم وكلمة المرور وأيضًا تعيين اسم المضيف والمنفذ",
