--- a/src/webui/_locales/bo/messages.json
+++ b/src/webui/_locales/bo/messages.json
@@ -67,6 +67,10 @@
         "message": "སྒྲིག་བཀོད།",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "ཨོས་ཀྲི་ཡ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "མཐུད་ཚར་སོང་།",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "སཡི་ཕོན་ <span class=\"state-word\">མཐུད་མཚམས་བཞག་བཞིན་པ།</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "སུད་སི།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "གནས་སྐབས་རིང་ལ་སཡི་ཕོན་ནས་ཁྱེད་རང་གི་ངོ་ཚབ་འགྲོ་ལུགས་དེ་བཞིན་དེའི་\"ནང་འཇུག་ངོ་ཚབ་\"ལ་བཀོད་སྒྲིག་བྱས་ཡོད<br>\nཡིན་ནའང་ང་ཚོས་ངོ་ཚབ་དེ་རྒྱུད་དེ་སཡི་ཕོན་ཞབས་ཞུ་འཕྲུལ་ཆས་ལ་མཐུད་ཐུབ་ཀྱི་མིན་འདུག<br>\n\"ནང་འཇུག་ངོ་ཚབ་བེད་སྤྱོད་མ་བྱེད་\" འདེམས་ནས་ཡང་སྐྱར་ཐབས་ཤེས་གནང་རོགས།",
@@ -159,6 +167,10 @@
         "message": "སི་པན།",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "ཌེན་མཀ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "སྒྲིག་བཀོད་བསྒྱུར་བཅོས།",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>སཡི་ཕོན་གྱི་ལམ་ལུགས་ངོ་ཚབ་སྒྲིག་བཀོད་དེ་སྒྲིག་ཐུབ་མ་སོང་།</p>\n<p>དེ་ནི་ཁྱེད་རང་གི་དྲྭ་འབུ་འགོག་བྱེད་ཀྱི་མཉེན་ཆས་ལ་འགལ་ཟླ་འབྱུང་བའི་རྐྱེན་གྱིས་མིན་ནམ་སྙམ། དེར་ཁྱེད་རང་གི་མཉེན་ཆས་འདི་མཛུབ་འདེམས་སྒྲིག་དགོས་པ་དང་། ཡང་ན་ལམ་ལུགས་སྒྲིག་བཀོད་བེད་སྤྱོད་བྱས་ནས་བསྟི་གནས་སཡི་ཕོན་ངོ་ཚབ་བེད་སྤོྱོད་བྱེད།</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "ཧང་ཀ་རི།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nཁྱེད་རང་གིས་སཡི་ཕོན་སྒྲིག་བཀོད་བྱད་ནས་་SOCKS ངོ་ཚབ་བསྟི་གནས་མཐུད་སྒོ་བེད་སྤྱོད་བྱེ་བྲག་པ་བེད་སྤྱོད་བྱེད་ཆེད་དུ་ཡིན་<br>\nཡིན་ནའང་མཐུད་སྒོ་དེ་ད་ལྟ་བེད་སྤྱོད་གཏོང་བཞིན་པས་སཡི་ཕོན་གྱིས་བེད་སྤྱོད་བཏང་མི་ཐུབ།\n</p>\n<p>\nམཁྱེན་རྟོགས་ཀྱི་སླད་དུ་སྒྲིག་བཀོད་བྱས་པའིSOCKS ངོ་ཚབ་མཐུད་སྒོ་བརྗེས་ནས་ཡང་སྐྱར་ཐབས་ཤེས་གཅིག་གནང་རོགས། ང་ཚོའི་རེ་བ་་ལ་ཁྱེད་རང་གིས་མཐུད་སྒོ་དེ་གཙང་མ་བཟོས་ཏེ་སཡི་ཕོན་གྱིས་རང་འགུལ་ངང་ནས་མཐུད་སྒོ་གཞན་ཞིག་འདེམས་ཐུབ།.\n</p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "རྒྱུད་དེ་མཐུད་པ།",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "བྷེལ་གེ་རེ་ཡ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "ཝིན་ཌོ་སྒེར་སྤྱོད་གྱི་ཐོན་རིམ་ཆེད་དུ་སཡི་ཕོན་:",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "ནོར་ཝེ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "ངོ་ཚབ་ནང་འཇུག",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "ཕཱ་རན་སི།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "ཨི་ཀྲ་ལི།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "ཁྱེད་རང་གི་སྒྲིག་བཀོད་ནང་ལ་ནོར་སྐྱོན་ཤོར་འདུག རྒྱུན་སྐྱོང་མ་གནང་གོང་ལ་བསྒྱུར་བ་གཏོང་རོགས་གནང་།",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "ཇར་མ་ནི།",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "ཧོང་ཀོང་།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "སཡི་ཕོན་གྱིས་དྲྭ་རྒྱ་མཐུད་མིང་“<%- data %>”འདིར་འགྲོ་ལུགས་ངོ་ཚབ་སྒྲིག་བཀོད་བྱེད་ཐུབ་མ་སོང་། དེ་ནི་ཁྱེད་རང་གི་དྲྭ་འབུ་འགོག་བྱེད་ཀྱི་མཉེན་ཆས་དང་འགལ་ཟླ་ཡོད་པའི་རྐྱེན་གྱིས་ཡིན་སྲིད། དེར་ཁྱེད་རང་གི་མཉེན་ཆས་འདི་མཛུབ་འདེམས་སྒྲིག་དགོས་པ་དང་། ཡང་ན་ལམ་ལུགས་སྒྲིག་བཀོད་བེད་སྤྱོད་བྱས་ནས་བསྟི་གནས་སཡི་ཕོན་ངོ་ཚབ་བེད་སྤོྱོད་བྱེད།",
@@ -403,6 +439,10 @@
         "message": "ཁྱེད་རང་གིས་སྤྱོད་མིང་དང་གསང་ཨང་གཉིས་ཀ་ངེས་པར་དུ་སྒྲིག་དགོས། ཡང་ན་ཁུངས་ལྡན་མིན་པའི་ཆེད་དུ་རེའུ་མིག་གཉིས་ཀ་སྟོང་པར་བཞག",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "བྷེལ་ཇེམ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": " L2TP/IPSec བེད་སྤྱོད་བྱེད་ཚུལ།",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "རྒྱུད་དེ་མཐུད་པ།",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "སི་ཝི་ཌན།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "དབྱིན་ཡུལ།",
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "སཡི་ཕོན་ས་ཁུལ་ཞབས་ཞུ་འཕྲུལ་ཆས་",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "རོ་མ་ནི་ཡ།",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "ཅེཀ་རི་པཱ་ལིཀ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "སྤྱོད་མིང་དང་གསང་ཨང་སྒྲིག་པ་ལ་དོ་བདག་་བའི་མིང་དང་མཐུད་སྒོ་ཡང་སྒྲིག་དགོས།",
