--- a/src/webui/_locales/es/messages.json
+++ b/src/webui/_locales/es/messages.json
@@ -67,6 +67,10 @@
         "message": "Configuración",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "Austria",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "Conectado",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "Psiphon está <span class=\"state-word\">desconectando</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "Suiza",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "Psiphon actualmente está configurado para usar el proxy (interpuesto) de su sistema como su \"proxy al exterior\".<br>\nSin embargo, parece que no podemos conectar a un servidor Psiphon a través de ese proxy.<br>\nPor favor, habilite \"No usar el proxy al exterior\" e inténtelo de nuevo.",
@@ -159,6 +167,10 @@
         "message": "España",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "Dinamarca",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "La configuración cambió",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>Psiphon no pudo al establecer la configuración para proxy (interpuesto) del sistema.</p>\n<p>Esto podría deberse a un conflicto con su software antivirus. Puede que necesite configurar manualmente su aplicación o los ajustes para proxy de su sistema para que use los servidores proxy locales de Psiphon.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "Hungría",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nHa configurado Psiphon para que use un puerto local específico para su propio proxy SOCKS.<br>\nSin embargo, ese puerto parece estar ya en uso y por tanto Psiphon no puede usarlo.\n</p>\n<p>\nPor favor, cambie el valor configurado de puerto para proxy SOCKS e inténtelo de nuevo. Recomendamos que deje en blanco el valor de forma que Psiphon pueda seleccionar automáticamente un puerto disponible.\n</p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "Conectar vía",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "Bulgaria",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "Versión del cliente para Windows de Psiphon:",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "Noruega",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "Proxy hacia Internet",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec (VPN)",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "Francia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "Italia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "Hay errores en los valores de su configuración. Por favor, corríjalos antes de continuar.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "Alemania",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "Hong Kong",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "Psiphon no pudo establecer la configuración para proxy (interpuesto) del sistema para la conexión a Internet de nombre “<%- data %>”. Esto podría deberse a un conflicto con su software antivirus. Puede que necesite configurar manualmente su aplicación o los ajustes para proxy del sistema para que usen los servidores proxy locales de Psiphon.",
@@ -403,6 +439,10 @@
         "message": "Tiene que establecer tanto el Nombre de Usuario como la Contraseña, o dejar ambos en blanco para no usar autentificación.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "Bélgica",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "Usar el modo L2TP/IPSec (VPN)",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "Conectar vía",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "Suecia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "Reino Unido",
@@ -424,7 +468,7 @@
         "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
     },
     "feedback#smiley_sad": {
-        "message": "Psiphon falla a menudo al conectar o no rinde suficientemente bien.",
+        "message": "Psiphon falla a menudo al conectar o no funciona suficientemente bien.",
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#unapplied-changes-prompt#body": {
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "Región del servidor Psiphon",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "Rumanía",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "República checa",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "Establecer un Nombre de Usuario y Contraseña también requiere establecer un Nombre de Servidor y Puerto.",
@@ -468,7 +520,7 @@
         "description": "Label for a text box where the user can provide a feedback message to Psiphon Inc."
     },
     "feedback#smiley_happy": {
-        "message": "Psiphon conecta y rinde de la forma que yo quiero.",
+        "message": "Psiphon conecta y funciona de la forma que yo quiero.",
         "description": "The text below the 'happy face' feedback choice."
     },
     "settings#upstream-proxy#domain-label": {
