--- a/src/webui/_locales/fa/messages.json
+++ b/src/webui/_locales/fa/messages.json
@@ -67,6 +67,10 @@
         "message": "تنظیمات",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "اتریش",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "متصل شد",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "سایفون <span class=\"state-word\">در حال قطع شدن است</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "سوییس",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "در حال حاضر سایفون تنظیم شده است که از تنظیمات پروکسی سیستم که تنظیمات بالادستی پروکسی است استفاده کند. <br>\nهرچند، با این تنظیمات پروکسی به نظر می رسد که امکان اتصال به سرور سایفون را نداریم. <br>\nلطفا گزینه \"از پروکسی بالادستی استفاده نکن\" را فعل کرده و مجددا تلاش کنید.",
@@ -159,6 +167,10 @@
         "message": "اسپانیا",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "دانمارک",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "تنظیمات تغییر داده شد",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>سایفون نتوانست تنظیمات پروکسی سیستم را انجام دهد.</p>\n <p>ممکن است برنامه ضدویروس شما مانع این کار شده باشد. برای استفاده از پروکسی محلی سایفون شاید لازم باشد که تنظیمات پروکسی نرم افزار و یا سیستم را دستی تغییر دهید.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "مجارستان",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nشما سایفون را تنظیم کردید که از یک پورت محلی خاص برای پراکسی SOCKS استفاده کند.\n<br>\nاما٬ به نظر میرسد که آن پورت در حال استفاده شدن است و سایفون نمیتواند از آن استفاده کند. \n</p>\n<p>\nلطفا تنظیم پورت SOCKS پراکسی را تغییر دهید و دوباره امتحان کنید. ما پیشنهاد میکنیم که قسمت   این تنظیم را خالی بگذارید تا سایفون بتواند بطور خودکار یک پورت در دسترس را استفاده کند.  </p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "اتصال از طریق",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "بلغارستان",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "سایفون برای نسخه ویندوز سرویس گیرنده:",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "نروژ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "پروکسی بالادست",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP / IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "فرانسه",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "ایتالیا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "اشتباهاتی در تنظیمات رخ داده است. لطفا پیش از ادامه کار، آن ها را تصحیح کنید.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "آلمان",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "هنگ کنگ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "سایفون نتوانست تنظیمات پروکسی سیستم برای اتصال اینترنتی با نام  “<%- data %>” انجام دهد. این مساله ممکن است به دلیل تداخل با برنامه ضد ویروس به وجود آمده باشد. برای استفاده از پروکسی محلی سایفون شاید لازم باشد تنظیمات پروکسی نرم افزار و یا سیستم را دستی انجام دهید.",
@@ -403,6 +439,10 @@
         "message": "شما باید تعیین کنید هر دو نام کاربری و رمز عبور را، و یا خالی بگذارید بدون احراز هویت.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "بلژیک",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "استفاده از حالت L2TP / IPSec ",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "اتصال از طریق",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "سوئد",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "انگلستان",
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "کشور سرور خروجی سایفون ",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "رومانی",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "جمهوری چک",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "تنظیم یک نام کاربری و رمز عبور نیز نیاز دارد به تنظیم یک نام میزبان و پورت",
