--- a/src/webui/_locales/fr/messages.json
+++ b/src/webui/_locales/fr/messages.json
@@ -28,7 +28,7 @@
         "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#error-alert": {
-        "message": "<strong>Erreur !</strong> Veuillez corriger les valeurs erronées avant de continuer.",
+        "message": "<strong>Erreur !</strong> Veuillez corriger les valeurs erronées avant de continuer.",
         "description": "This alert is shown to the user if they enter incorrect values into one or more of the settings fields."
     },
     "settings#local-proxy-ports#reason": {
@@ -44,7 +44,7 @@
         "description": "Text appears above the sponsor banner image. So it kind of reads 'Sponsored by BBC' (for example)."
     },
     "appbackend#state-connected-body": {
-        "message": "Explorez par-delà vos frontières !",
+        "message": "Explorez par-delà vos frontières !",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#disable-timeouts#enable-label": {
@@ -67,6 +67,10 @@
         "message": "Paramètres",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "Autriche",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "Connecté",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -87,12 +91,16 @@
         "message": "Psiphon se <span class=\"state-word\">déconnecte</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
     },
+    "settings#egress-region#select-ch": {
+        "message": "Suisse",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
+    },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "Psiphon est actuellement configuré pour utiliser le mandataire de votre système comme « mandataire ascendant ».<br>\nCependant, il nous semble impossible de nous connecter à un serveur Psiphon par ce mandataire.<br>\nVeuillez activer « Ne pas utiliser de mandataire ascendant » et ressayer.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
     },
     "feedback#success-message": {
-        "message": "<strong>Merci !</strong> Votre rétroaction a été envoyée.",
+        "message": "<strong>Merci !</strong> Votre rétroaction a été envoyée.",
         "description": "Message shown to user after their feedback has been sent successufully"
     },
     "settings#upstream-proxy#password-label": {
@@ -148,7 +156,7 @@
         "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
     },
     "appbackend#state-connected-reminder-body-2": {
-        "message": "Préservez la gratuité de Psiphon en visitant les pages de nos commanditaires !",
+        "message": "Préservez la gratuité de Psiphon en visitant les pages de nos commanditaires !",
         "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to visit the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "appbackend#state-starting-title": {
@@ -158,6 +166,10 @@
     "settings#egress-region#select-es": {
         "message": "Espagne",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
+    },
+    "settings#egress-region#select-dk": {
+        "message": "Danemark",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
     },
     "settings#unapplied-changes-prompt#title": {
         "message": "Paramètres modifiés.",
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>Psiphon n'a pas réussi à paramétrer le mandataire système.</p>\n<p>Cela pourrait être dû à un conflit avec votre antivirus. Il vous faudra peut-être configurer manuellement votre application ou votre mandataire système afin qu'ils utilisent les mandataires locaux de Psiphon.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "Hongrie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nVous avez configuré Psiphon pour qu'il utilise un port local spécifique pour son serveur mandataire SOCKS.<br>\nCependant, il semble que ce port est déjà utilisé et donc, Psiphon ne peut pas s'en servir.\n</p>\n<p>\nVeuillez changer la valeur de port de mandataire SOCKS configurée et ressayer. Nous vous recommandons de supprimer la valeur afin que Psiphon puisse choisir automatiquement un port disponible.\n</p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "Se connecté avec",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "Bulgarie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "Version du client Psiphon pour Windows :",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "Norvège",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "Mandataire ascendant",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "France",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "Italie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "Les valeurs de vos paramètres comportent des erreurs. Veuillez les corriger avant de continuer.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "Allemagne",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "Hong Kong",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "Psiphon n'a pas réussi à paramétrer le mandataire système pour la connexion Internet «%- data %> ». Cela pourrait être dû à un conflit avec votre antivirus. Il vous faudra peut-être configurer manuellement votre application ou votre mandataire système afin qu'ils utilisent les mandataires locaux de Psiphon.</p>",
@@ -316,7 +352,7 @@
         "description": "Title for the Feedback page"
     },
     "banner#long-connecting": {
-        "message": "<strong>Oh non !</strong> Il semble que vous éprouviez des difficultés de connexion !<br>\nTéléchargez la version la plus récente de Psiphon sur le <a class=\"NewVersionURL\" href=\"#\">\nou en envoyant un courriel à <a class=\"NewVersionEmail\" href=\"#\"></a>",
+        "message": "<strong>Oh non !</strong> Il semble que vous éprouviez des difficultés de connexion !<br>\nTéléchargez la version la plus récente de Psiphon sur le <a class=\"NewVersionURL\" href=\"#\">\nou en envoyant un courriel à <a class=\"NewVersionEmail\" href=\"#\"></a>",
         "description": "Message that appears when Psiphon is having trouble connecting. Often such connection problems can be fixed by downloading a new version."
     },
     "logs#placeholder": {
@@ -344,7 +380,7 @@
         "description": "Settings section heading. In this section the user can choose to enable or disable the ability for the Psiphon application window to be hidden as a notification area icon when minimized. 'Notification area' is the official term for the icons located near the clock on the Windows taskbar, but it's also often called the 'system tray' or 'systray' -- use whatever is most common in your language, and be verbose if necessary."
     },
     "language#success-message": {
-        "message": "<strong>Bonjour !</strong> Bienvenue à Psiphon.",
+        "message": "<strong>Bonjour !</strong> Bienvenue à Psiphon.",
         "description": "A welcome message shown to the user when they first switch to the correct UI language"
     },
     "settings#egress-region#select-sg": {
@@ -352,7 +388,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
     "feedback#diagnostic_check": {
-        "message": "Téléverser des données de diagnostic. Veuillez prendre note que ces données de diagnostic ne vous identifient pas, et elles nous aideront à offrir une exécution sans heurt de Psiphon. <a class=\"DataCollectionInfoURL\" href=\"#\">Cliquez ici pour voir quelles données nous recueillons.</a>",
+        "message": "Téléverser des données de diagnostic. Veuillez prendre note que ces données de diagnostic ne vous identifient pas et elles nous aideront à offrir une exécution sans heurt de Psiphon. <a class=\"DataCollectionInfoURL\" href=\"#\">Cliquez ici pour voir quelles données nous recueillons.</a>",
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
@@ -396,12 +432,16 @@
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
     "appbackend#state-connected-reminder-body": {
-        "message": "Préservez la gratuité de Psiphon. Cliquez ici pour visiter les pages de nos commanditaires !",
+        "message": "Préservez la gratuité de Psiphon. Cliquez ici pour visiter les pages de nos commanditaires !",
         "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to visit the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#upstream-proxy#set-username-password-error-msg": {
         "message": "Vous devez définir à la fois un nom d'utilisateur et un mot de passe, ou laisser les deux vides s'il n'y a pas d'authentification.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
+    },
+    "settings#egress-region#select-be": {
+        "message": "Belgique",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
     },
     "settings#transport-mode#check-label": {
         "message": "Utiliser le mode L2TP/IPSec",
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "Se connecté avec",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "Suède",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "Royaume-Uni",
@@ -428,7 +472,7 @@
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#unapplied-changes-prompt#body": {
-        "message": "Vous avez apporté des changements à vos paramètres, mais vous ne les avez pas appliqués.\n<br><br>Voulez-vous appliquer ces changements maintenant ou les rejeter ?",
+        "message": "Vous avez apporté des changements à vos paramètres, mais vous ne les avez pas appliqués.\n<br><br>Voulez-vous appliquer ces changements maintenant ou les rejeter ?",
         "description": "Body text of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
     },
     "settings#systray-minimize#enable-label": {
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "Région de serveur Psiphon",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "Roumanie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "République tchèque",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "En définissant un nom d'utilisateur et un mot de passe, il est aussi exigé de définir un nom d'hôte et un port",
