--- a/src/webui/_locales/nl/messages.json
+++ b/src/webui/_locales/nl/messages.json
@@ -67,6 +67,10 @@
         "message": "Instellingen",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "Oostenrijk",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "Verbonden",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "Psiphon is aan het <span class=\"state-word\">verbreken</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "Zwitserland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "Psiphon is momenteel zo geconfigureerd om uw systeem proxy gebruiken als “upstream proxy”.<br>\nEchter, Lijken we niet in staat te zijn om verbinding te maken met een Psiphon server via die proxyo.<br>\nA.u.b. Inschakelen “Gebruik geen upstream proxy” en probeer opnieuw.",
@@ -159,6 +167,10 @@
         "message": "Spain",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "Denemarken",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "Instellingen Gewijzigd",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>Psiphon faald om instellen de systeem’s proxy instellingen.</p>\n<p>Dit zou te wijten zijn aan een conflict met uw antivirussoftware. Je zou handmatig moeten configureren van uw toepassing of het systeem proxy-instellingen te gebruiken, de lokale Psiphon proxies.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "Hongarije",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nJe hebt Psiphon geconfigureerd om een specifieke lokale poort te gebruiken voor zijn SOCKS proxy.<br>\nEchter, Blijkt dat de poort al in gebruik is en Psiphon  kan die niet gebruiken.\n</p>\n<p>\nA.u.b verander de geconfigureerde SOCKS proxy-poort waarde en probeer het opnieuw. Wij raden u aan de waarde te wissen, zodat Psiphon automatisch een beschikbare poort kan halen.\n</p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "Verbinden via",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "Bulgarije",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "Psiphon voor Windows klant versie:",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "Noorwegen",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "Upstream Proxy",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "Frankrijk",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "Italië",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "Er zijn fouten in de instellingen van je waarden. Gelieve te corrigeren alvorens verder te gaan.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "Germany",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "Hong Kong",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "Psiphon faald om instellen de systeem’s proxy instelingen voor de Internet verbinding genaamd “<%- data %>”. Dit zou te wijten zijn aan een conflict met uw antivirussoftware. Je zou handmatig moeten configureren van uw toepassing of het systeem proxy-instellingen te gebruiken, de lokale Psiphon proxies.",
@@ -403,6 +439,10 @@
         "message": "U moet zowel gebruikersnaam en wachtwoord instellen, of laat beide leeg voor geen verificatie.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "Belgie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "Gebruik L2TP/IPSec mode",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "Verbinden via",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "Zweden",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "United Kingdom",
@@ -438,6 +482,14 @@
     "settings#egress-region#heading": {
         "message": "Psiphon Server Regio",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
+    },
+    "settings#egress-region#select-ro": {
+        "message": "Roemeenie",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "Czech Republiek",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "Instellen van een  gebruikersnaam en wachtwoord vereist ook het instellen van een hostnaam en poort",
