--- a/src/webui/_locales/vi/messages.json
+++ b/src/webui/_locales/vi/messages.json
@@ -44,7 +44,7 @@
         "description": "Text appears above the sponsor banner image. So it kind of reads 'Sponsored by BBC' (for example)."
     },
     "appbackend#state-connected-body": {
-        "message": "Tìm tòi bên ngoài biên giới!",
+        "message": "Tìm tòi bên kia biên giới!",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#disable-timeouts#enable-label": {
@@ -67,12 +67,16 @@
         "message": "Thiết đặt",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "Áo",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "Đã kết nối",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
     },
     "settings#egress-region#error-modal-title": {
-        "message": "Khu vực máy chủ không có sẵn",
+        "message": "Khu Vực Máy Chủ Không Có Sẵn",
         "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "settings#upstream-proxy#error-modal-title": {
@@ -86,6 +90,10 @@
     "connection#stopping-msg": {
         "message": "Psiphon <span class=\"state-word\">đang ngắt kết nối </span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#egress-region#select-ch": {
+        "message": "Thụy Sĩ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
     },
     "settings#upstream-proxy#error-modal-body-default": {
         "message": "Psiphon hiện được cấu hình để dùng proxy của hệ thống làm “proxy luồng trên”.<br>\nTuy nhiên, chúng tôi dường như không thể kết nối với máy chủ Psiphon qua proxy đó.<br>\nXin kích hoạt tùy chọn “Đừng dùng proxy luồng trên” và thử lại.",
@@ -104,7 +112,7 @@
         "description": "Appears in the notification area balloon when Psiphon is disconnected (or has lost its connection, or has been disconnected)"
     },
     "settings#split-tunnel#help-text": {
-        "message": "Nếu được kích hoạt, những yêu cầu từ các máy chủ trong quốc gia của bạn sẽ không được xuyên hầm qua Psiphon.",
+        "message": "Nếu được kích hoạt, những yêu cầu từ các máy chủ trong quốc gia của bạn sẽ không được kết nối xuyên qua Psiphon.",
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
@@ -112,7 +120,7 @@
         "description": "Paragraph on the 'About' page telling users what web page to go to get a new version of Psiphon or more info about it."
     },
     "settings#upstream-proxy#skip-label": {
-        "message": "Đừng dùng upstream proxy",
+        "message": "Đừng dùng proxy luồng trên",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
     "appbackend#state-connected-reminder-title": {
@@ -159,6 +167,10 @@
         "message": "Tây Ban Nha",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
+    "settings#egress-region#select-dk": {
+        "message": "Đan Mạch",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
+    },
     "settings#unapplied-changes-prompt#title": {
         "message": "Thiết đặt đã đổi",
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>Psiphon thất bại khi lập các thiết đặt proxy hệ thống.</p>\n<p>Đây có thể vì xung khắc với phần mềm chống vi-rút. Bạn cần cấu hình lại các thiết đặt của ứng dụng hoặc của proxy hệ thống để dùng proxy Psiphon địa phương.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "Hungary",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\nBạn cấu hình Psiphon dùng một cổng địa phương đặc trung cho proxy SOCKS.<br>\nTuy nhiên, cổng đó hình như đã được dùng rồi và Psiphon không thể dùng nó.\n</p>\n<p>\nXin đổi qua cổng khác và thử lại. Chúng tôi đề nghị bạn xóa số cổng để Psiphon tự động chọn một cổng đang còn trống.\n</p>",
@@ -198,6 +214,10 @@
     "settings#egress-region#label": {
         "message": "Kết nối qua",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-bg": {
+        "message": "Bulgaria",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
@@ -239,6 +259,10 @@
         "message": "Phiên bản trình Psiphon cho Windows:",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "Na Uy",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
         "message": "Proxy luồng trên",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "Pháp",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "Ý",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "Có lỗi trong các con số thiết đặt. Xin điều chỉnh lại trước khi tiếp tục.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -282,6 +314,10 @@
     "settings#egress-region#select-de": {
         "message": "Đức",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
+    },
+    "settings#egress-region#select-hk": {
+        "message": "Hồng Kông",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "Psiphon thất bại khi lập các thiết đặt proxy hệ thống cho đường kết nối internet mang tên “<%- data %>”. Đây có thể vì xung khắc với phần mềm chống vi-rút. Bạn cần cấu hình lại các thiết đặt của ứng dụng hoặc của proxy hệ thống để dùng proxy Psiphon địa phương.",
@@ -356,7 +392,7 @@
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
-        "message": "Chế độ chuyển giao",
+        "message": "Chế Độ Chuyển Giao",
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
@@ -380,7 +416,7 @@
         "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
     },
     "settings#split-tunnel#heading": {
-        "message": "Đường hầm tách",
+        "message": "Đường Hầm Tách",
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#egress-region#invalid-error-msg": {
@@ -403,6 +439,10 @@
         "message": "Bạn phải thiết lập cả hai Tên Người Dùng và Mật Khẩu, hoặc để trống cả hai để không cần xác thực.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "Bỉ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "Dùng chế độ L2TP/IPSec",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "Kết nối qua",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "Thụy Điển",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "Anh Quốc",
@@ -439,16 +483,24 @@
         "message": "Vùng máy chủ Psiphon",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
+    "settings#egress-region#select-ro": {
+        "message": "Romania",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "Tiệp",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
+    },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "Thiết lập Tên Người Dùng và Mật Khẩu thì cần phải thiết lập Tên Máy Chủ và Cổng",
         "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#disable-timeouts#heading": {
-        "message": "Tắt hạn chờ cho mạng chậm",
+        "message": "Tắt Hạn Chờ cho Mạng Chậm",
         "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
     },
     "settings#upstream-proxy#by-default": {
-        "message": "Nếu máy đã có sẵn cấu hình proxy, theo mặc định Psiphon sẽ dùng proxy đó khi mở đường hầm. Bạn có thể lờ cách đó đi bằng cách nêu rõ cần dùng proxy nào, hoặc cho biết là không dùng \"proxy luồng trên\".",
+        "message": "Nếu máy đã có sẵn cấu hình proxy, theo mặc định Psiphon sẽ dùng proxy đó khi mở đường hầm kết nối an toàn. Bạn có thể lờ cách đó đi bằng cách nêu rõ cần dùng proxy nào, hoặc cho biết là không dùng \"proxy luồng trên\".",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
@@ -476,7 +528,7 @@
         "description": "Label for the text box where the user can set the domain for the 'upstream proxy'."
     },
     "about#wordart-tag": {
-        "message": "Vượt Biên Giới",
+        "message": "Bên Kia Biên Giới",
         "description": "The application/product/tool tagline/slogan/motto part of the fancy title at the top of the 'About' page. 'Beyond Borders' is the slogan that is also used on the Psiphon website -- it is meant to suggest that Psiphon can help users to get to the internet beyond the border (firewall) of the country they live in."
     },
     "settings#upstream-proxy#username-label": {
@@ -492,7 +544,7 @@
         "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#transport-mode#help-text": {
-        "message": "Dùng mạng ảo L2TP/IPSec của Windows. Chế độ này sẽ đưa tất cả ứng dụng xuyên hầm, nhưng không cung cấp việc rối mã và vì thế không có khả năng mạnh mẽ để vượt kiểm duyệt.  <strong>Đề nghị không dùng</strong> để vượt hầu hết tường lửa.",
+        "message": "Dùng mạng ảo L2TP/IPSec của Windows. Chế độ này sẽ đưa tất cả ứng dụng xuyên qua Psiphon, nhưng không cung cấp việc rối mã và vì thế không có khả năng mạnh mẽ để vượt kiểm duyệt.  <strong>Đề nghị không dùng</strong> để vượt hầu hết tường lửa.",
         "description": "Help text for the 'Use L2TP/IPSec mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
