--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -12,7 +12,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
     },
     "settings#upstream-proxy#error-modal-body-configured": {
-        "message": "您已配置赛风使用一个“上层代理”。<br>\n然而，我们似乎无法通过该代理连接到赛风服务器。<br>\n请修正设置后再试。",
+        "message": "您已配置赛风使用一个“上游代理”。<br>\n然而，我们似乎无法通过该代理连接到赛风服务器。<br>\n请修正设置后再试。",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
     "logs#show-debug-label": {
@@ -44,7 +44,7 @@
         "description": "Text appears above the sponsor banner image. So it kind of reads 'Sponsored by BBC' (for example)."
     },
     "appbackend#state-connected-body": {
-        "message": "探索边界外面的世界！",
+        "message": "超越国界开启探索！",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#disable-timeouts#enable-label": {
@@ -67,6 +67,10 @@
         "message": "设置",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#select-at": {
+        "message": "奧地利",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
+    },
     "nav#connection#connected": {
         "message": "已连接",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is connected."
@@ -76,7 +80,7 @@
         "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "settings#upstream-proxy#error-modal-title": {
-        "message": "上层代理错误",
+        "message": "上游代理错误",
         "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
     },
     "settings#egress-region#default": {
@@ -87,8 +91,12 @@
         "message": "赛风<span class=\"state-word\">断开连接中</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
     },
+    "settings#egress-region#select-ch": {
+        "message": "瑞士",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Switzerland will be used."
+    },
     "settings#upstream-proxy#error-modal-body-default": {
-        "message": "赛风当前使用您的系统代理作为其“上层代理”。<br>\n然而，我们似乎无法通过该代理连接到赛风服务器。<br>\n请启用“不使用上层代理”后再试。",
+        "message": "赛风当前使用您的系统代理作为其“上层代理”。<br>\n然而，我们似乎无法通过该代理连接到赛风服务器。<br>\n请启用“不使用上游代理”后再试。",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
     },
     "feedback#success-message": {
@@ -112,11 +120,11 @@
         "description": "Paragraph on the 'About' page telling users what web page to go to get a new version of Psiphon or more info about it."
     },
     "settings#upstream-proxy#skip-label": {
-        "message": "不使用上层代理",
+        "message": "不使用上游代理",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
     "appbackend#state-connected-reminder-title": {
-        "message": "赛风正在保持您已连接",
+        "message": "赛风正保持已连接状态",
         "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server."
     },
     "settings#egress-region#select-ca": {
@@ -148,7 +156,7 @@
         "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
     },
     "appbackend#state-connected-reminder-body-2": {
-        "message": "维持赛风免费通过访问我们的赞助商页面！",
+        "message": "通过访问我们的赞助商页面来维持赛风免费！",
         "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to visit the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "appbackend#state-starting-title": {
@@ -158,6 +166,10 @@
     "settings#egress-region#select-es": {
         "message": "西班牙",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
+    },
+    "settings#egress-region#select-dk": {
+        "message": "丹麦",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Denmark will be used."
     },
     "settings#unapplied-changes-prompt#title": {
         "message": "设置已更改",
@@ -174,6 +186,10 @@
     "notice#systemproxysettings-setproxy-error-body": {
         "message": "<p>Psiphon 更改系统的代理设置失败了。</p>\n<p>这可能是由于和您的防病毒软件冲突所致。您可能需要手动修改应用或系统的代理配置以便使用本地的 Psiphon 代理。</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
+    },
+    "settings#egress-region#select-hu": {
+        "message": "匈牙利",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hungary will be used."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
         "message": "<p>\n您已配置赛风使用指定的本地端口开启 SOCKS 代理。<br>\n然而，此端口似乎已被占用，赛风无法使用之。\n</p>\n<p>\n请更改配置的 SOCKS 代理端口值然后再试。我们建议您清除该值，使赛风自动挑选可用端口。\n</p>",
@@ -199,12 +215,16 @@
         "message": "连接经由",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
     },
+    "settings#egress-region#select-bg": {
+        "message": "保加利亚",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Bulgaria will be used."
+    },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
         "description": "Label for the text box where the user will enter their desired local port for the Psiphon SOCKS process. The full term for this would be 'Desired SOCKS local proxy port', but is shortened. 'SOCKS' is a proxy protocol. Any user for whom this setting is useful will know what that means."
     },
     "feedback#top_para_3": {
-        "message": "您也可以在我们的<a class=\"FaqURL\" href=\"#\">常见问题</a>中找到许多常见问题的解决方案。",
+        "message": "有关许多常见问题的解决方案，请参阅<a class=\"FaqURL\" href=\"#\">常见问题与解答</a>。",
         "description": "Text telling the user how to get to the Psiphon FAQ."
     },
     "settings#saved-message": {
@@ -239,8 +259,12 @@
         "message": "赛风 Windows 客户端版本：",
         "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
     },
+    "settings#egress-region#select-no": {
+        "message": "挪威",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
+    },
     "settings#upstream-proxy#heading": {
-        "message": "上层代理",
+        "message": "上游代理",
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#egress-region#description": {
@@ -263,6 +287,14 @@
         "message": "L2TP/IPSec",
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
+    "settings#egress-region#select-fr": {
+        "message": "法国",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in France will be used."
+    },
+    "settings#egress-region#select-it": {
+        "message": "意大利",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Italy will be used."
+    },
     "settings#error-modal#body": {
         "message": "设定中有错误，请先更正再继续。",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
@@ -283,6 +315,10 @@
         "message": "德国",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
     },
+    "settings#egress-region#select-hk": {
+        "message": "香港",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
+    },
     "notice#systemproxysettings-setproxy-warning-template": {
         "message": "Psiphon 更改名为“<%- data %>”的网络连接的系统代理设置失败了。这可能是由于和您的防病毒软件冲突所致。您可能需要手动修改应用或系统的代理配置以便使用本地的 Psiphon 代理。",
         "description": "'<%- data %>' is a placeholder and must not be modified. Log message emitted when Psiphon can't fully configure the system to use Psiphon. It may or may not be a fatal state, and may or may not need human intervention."
@@ -296,11 +332,11 @@
         "description": "Descriptive body text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "feedback#text_feedback_bottom_para": {
-        "message": "如果以上表单无法使用，或者阁下想发送截图，请给我们发电邮至<a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>。",
+        "message": "如果以上表格无法使用，或需发送截图，请发电子邮件至 <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>。",
         "description": "Message showing the user an email they can use to contact Psiphon Inc."
     },
     "settings#upstream-proxy#reason": {
-        "message": "有些地方如学校和企业等需要使用上层代理。如果您的网络提供者给过您上层代理的参数，请在此手动设置之以便成功连接。",
+        "message": "有些地方如学校和企业等需要使用上游代理。如果您的网络提供者给过您上层代理的参数，请在此手动设置之以便成功连接。",
         "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
     },
     "settings#local-proxy-ports#error-modal-title": {
@@ -352,7 +388,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
     "feedback#diagnostic_check": {
-        "message": "上传诊断数据。请注意此诊断数据不会泄露您的身份，它将帮助我们保持赛风平稳运行。<a class=\"DataCollectionInfoURL\" href=\"#\">点击这里查看我们收集的数据。</a>",
+        "message": "上传诊断数据。请注意，这些诊断数据将帮助我们保持赛风顺畅运行，并无法识别用户。<a class=\"DataCollectionInfoURL\" href=\"#\">点击这里查看我们收集的数据。</a>",
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
@@ -403,6 +439,10 @@
         "message": "您必须同时设置用户名和密码，或者把两栏都留空表示不需要验证。",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
+    "settings#egress-region#select-be": {
+        "message": "比利时",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
+    },
     "settings#transport-mode#check-label": {
         "message": "使用 L2TP/IPSec 模式",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -410,6 +450,10 @@
     "connection#egress-region-combo-label": {
         "message": "连接经由",
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+    },
+    "settings#egress-region#select-se": {
+        "message": "瑞典",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#select-gb": {
         "message": "英国",
@@ -424,7 +468,7 @@
         "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
     },
     "feedback#smiley_sad": {
-        "message": "赛风经常连接失败或表现不尽人意。",
+        "message": "赛风经常连接失败或表现不尽如人意。",
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#unapplied-changes-prompt#body": {
@@ -439,6 +483,14 @@
         "message": "赛风服务器区域",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
+    "settings#egress-region#select-ro": {
+        "message": "罗马尼亚",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
+    },
+    "settings#egress-region#select-cz": {
+        "message": "法国",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Czech Republic will be used."
+    },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
         "message": "设置用户名和密码的同时请设置主机名和端口",
         "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
@@ -448,7 +500,7 @@
         "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
     },
     "settings#upstream-proxy#by-default": {
-        "message": "如果您的电脑已经配置了代理，默认情况下赛风将在建立隧道时使用该代理。您可以变更此行为，指定要使用的代理，或者要求不使用此类“上层代理”。",
+        "message": "如果您的电脑已经配置了代理，默认情况下赛风将在建立隧道时使用该代理。您可以变更此行为，指定要使用的代理，或者要求不使用此类“上游代理”。",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
